<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preview_activity_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.PreviewActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/preview_activity_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/preview_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/preview_activity_toolbar_height"
            app:navigationIcon="@drawable/ic_arrow_back_white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/preview_activity_name"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/preview_activity_account_image_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_account_box_black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/preview_activity_account_image_view"
                    android:layout_toRightOf="@id/preview_activity_account_image_view">

                    <TextView
                        android:id="@+id/preview_activity_account_name_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/preview_account_name"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/preview_activity_account_email_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@id/preview_activity_account_name_text_view"
                        android:layout_marginTop="8dp"
                        android:text="@string/preview_account_email"
                        android:textSize="15sp" />

                </RelativeLayout>

            </RelativeLayout>

            <View
                android:id="@+id/preview_activity_divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/divider_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/preview_select_age_text"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <Button
                    android:id="@+id/preview_activity_save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/preview_save_button"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/preview_activity_seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/preview_activity_save_button"
                    android:layout_toStartOf="@id/preview_activity_save_button" />

            </RelativeLayout>

            <View
                android:id="@+id/preview_activity_divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/divider_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/preview_activity_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:checked="true" />

                <TextView
                    android:id="@+id/preview_activity_check_box_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_toLeftOf="@id/preview_activity_check_box"
                    android:layout_toStartOf="@id/preview_activity_check_box"
                    android:text="@string/preview_check_box_text"
                    android:textSize="18sp" />

            </RelativeLayout>

            <View
                android:id="@+id/preview_activity_divider_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/divider_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/preview_activity_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:checked="false" />

                <TextView
                    android:id="@+id/preview_activity_switch_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_toLeftOf="@id/preview_activity_switch"
                    android:layout_toStartOf="@id/preview_activity_switch"
                    android:text="@string/preview_switch_text"
                    android:textSize="18sp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/preview_activity_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:src="@drawable/ic_add_white"
        app:fabSize="normal"
        app:layout_anchor="@id/preview_activity_app_bar_layout"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
